<resources>
    <string name="app_name">CASAD</string>
    <string name="select_profile">Escolha o seu perfil</string>

    <string name="title_client">CLIENTE</string>
    <string name="text_client">Escolha esse perfil para caso queira ver os nosso produtos!</string>

    <string name="title_prof">FORNECEDOR</string>
    <string name="text_prof">Caso você seja parte desta cooperativa, escolha esta opção!</string>
</resources>
